syntax = "proto3";

package Common.Proto.User;
import "Base/NetError.proto";

message LoginRequest {
    string username = 1;
    string password = 2;
}

message LoginResponse {
    Base.NetError error = 1;
}